--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: formlo-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn formlo:app
     plan: free
